data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_246.wast
;; 7. **Test 7: Loop with Stack Manipulation and `nop`**:    - **Description**: A loop containing stack manipulation instructions (e.g., `i32.add`) and `nop` instructions.    - **Constraint**: Validate that `nop` does not alter the stack state or the loop’s read/write operations.    - **Relation to Infinite Loops**: Ensures `nop` doesn’t inadvertently affect stack state leading to improper loop behavior.    - **Example**: `(loop $L (nop) (i32.add (i32.const 1) (i32.const 2)) (br_if $L (i32.const 1)))`

(assert_malformed
  (module
    (func $loop-nop
      (loop $L
        (nop)
        (i32.add (i32.const 1) (i32.const 2))
        (br_if $L (i32.const 1))
      )
    )
  )
)